sock-shop/base/front-end-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: frontend
spec:
  ingressClassName: nginx
  rules:
  - host: sock-shop.kb.dewkul.me
    http:
      paths:
      - backend:
          service:
            name: front-end
            port:
              number: 80
        path: /
        pathType: Prefix
